<resources>

    <string name="app_name">Trombi</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Trombi</string>
    <string name="prendrephoto">Prendre une photo</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="hint_vide"></string>
    <string name="groupe">Groupe</string>
    <string name="rechercher">Rechercher</string>
    <string name="avecphoto">Possèdant photo</string>
    <string name="ajouterprofil">Ajouter</string>
    <string name="ajouter">Ajouter</string>
    <string name="Editer">Editer</string>
    <string name="suivant">Suivant ></string>

</resources>