<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageViewEdit1"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="Photo de profil"
        android:src="@drawable/photo_profil_vide" />

    <Button
        android:id="@+id/buttonEdit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewEdit1"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageViewEdit1"
        android:text="@string/prendrephoto" />

    <TextView
        android:id="@+id/textViewEdit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageViewEdit1"
        android:text="@string/nom"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/editTextEdit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewEdit1"
        android:ems="10"
        android:textSize="30dp" >
    </EditText>

    <TextView
        android:id="@+id/textViewEdit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextEdit1"
        android:text="@string/prenom"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp" />



    <EditText
        android:id="@+id/editTextEdit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewEdit2"
        android:ems="10"
        android:textSize="30dp" />




    <TextView
        android:id="@+id/textViewEdit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextEdit2"
        android:text="@string/groupe"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp" />



    <EditText
        android:id="@+id/editTextEdit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewEdit3"
        android:ems="10"
        android:textSize="30dp" />





    <Button
        android:id="@+id/buttonEdit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextEdit3"
        android:text="@string/Editer"
        android:textSize="30dp" />

</RelativeLayout>